# rusticity

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build.yml  release.yml
rusticity/: Cargo.toml
rusticity-core/: Cargo.toml
rusticity-core/src/: alarms.rs  apig.rs  cfn.rs  cloudtrail.rs  config.rs  cw.rs  ec2.rs  ecr.rs  efs.rs  fsx.rs  iam.rs  kms.rs  lambda.rs  lib.rs  s3.rs  sqs.rs  types.rs
rusticity-term/: Cargo.toml  build.rs
rusticity-term/src/: app.rs  cfn.rs  common.rs  ec2.rs  ecr.rs  efs.rs  event.rs  fsx.rs  iam.rs  keymap.rs  kms.rs  lambda.rs  lib.rs  s3.rs  sqs.rs  table.rs
rusticity-term/src/apig/: actions.rs  api.rs  mod.rs  resource.rs  route.rs
rusticity-term/src/aws/: mod.rs  profile.rs  region.rs
rusticity-term/src/cfn/: actions.rs  mod.rs
rusticity-term/src/cloudtrail/: actions.rs  events.rs  mod.rs  resources.rs
rusticity-term/src/cw/: actions.rs  alarms.rs  insights.rs  logs.rs  mod.rs  tag.rs
rusticity-term/src/ec2/: actions.rs  mod.rs  tag.rs
rusticity-term/src/ecr/: actions.rs  image.rs  repo.rs
rusticity-term/src/efs/: access_point.rs  actions.rs  fs.rs  mount_target.rs
rusticity-term/src/fsx/: actions.rs  fs.rs
rusticity-term/src/iam/: actions.rs  mod.rs
rusticity-term/src/kms/: actions.rs  key.rs
rusticity-term/src/lambda/: applications.rs  functions.rs  mod.rs
rusticity-term/src/s3/: actions.rs  mod.rs
rusticity-term/src/session/: core.rs  mod.rs  ui.rs
rusticity-term/src/sqs/: actions.rs  pipe.rs  queue.rs  sub.rs  tag.rs  trigger.rs
rusticity-term/src/ui/: apig.rs  cfn.rs  cloudtrail.rs  ec2.rs  ecr.rs  efs.rs  expanded_view.rs  filter.rs  fsx.rs  iam.rs  kms.rs  lambda.rs  mod.rs  monitoring.rs  pagination.rs  prefs.rs  query_editor.rs  s3.rs  sqs.rs  status.rs  styles.rs  table.rs  tree.rs
rusticity-term/src/ui/cw/: alarms.rs  insights.rs  logs.rs  mod.rs
rusticity/src/: main.rs
rusticity/tests/: pre_commit.rs
