[workspace]
members = [
    "rusticity-core",
    "rusticity-term",
    "rusticity",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# AWS SDK
aws-config = "1.5"
aws-sdk-cloudwatchlogs = "1.49"
aws-sdk-cloudwatch = "1.49"
aws-sdk-s3 = "1.49"
aws-sdk-sts = "1.49"

# TUI
ratatui = { version = "0.29", features = ["widget-calendar"] }
crossterm = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
futures = "0.3"
