[package]
name = "rusticity-term"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal UI components for Rusticity"

[lints.rust]
unused_imports = "deny"

[dependencies]
rusticity-core = { version = "0.1.1", path = "../rusticity-core" }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
urlencoding = "2.1"
dirs = "5.0"
ureq = "2.10"
arboard = "3.4"
webbrowser = "1.0"
