[package]
name = "rusticity"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "A snappy terminal UI for AWS written in Rust"
readme = "../README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories = ["command-line-interface"]
keywords = ["aws", "terminal", "tui", "cloud"]

[[bin]]
name = "rusticity"
path = "src/main.rs"

[dependencies]
rusticity-core = { version = "0.1.3", path = "../rusticity-core" }
rusticity-term = { version = "0.1.3", path = "../rusticity-term" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
arboard = "3.4"

